2004-12-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/ByteBuffer/compact.java,
	gnu/testlet/java/nio/CharBuffer/compact.java,
	gnu/testlet/java/nio/DoubleBuffer/compact.java,
	gnu/testlet/java/nio/FloatBuffer/compact.java,
	gnu/testlet/java/nio/IntBuffer/compact.java,
	gnu/testlet/java/nio/LongBuffer/compact.java,
	gnu/testlet/java/nio/ShortBuffer/compact.java:
	New testcases.

2004-12-27  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/nio/ByteBuffer/Allocating.java
	(test): Fixed arrayOffset check and Removed println() statements.

2004-12-26  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/charset/Charset/encode.java: New testcases.

2004-12-26  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/ByteBuffer/Allocating.java,
	gnu/testlet/java/nio/ByteBuffer/ByteBufferFactory.java,
	gnu/testlet/java/nio/ByteBuffer/GetPut.java,
	gnu/testlet/java/nio/ByteBuffer/Order.java:
	New testcases.

2004-12-26  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/imageio/ImageIO/ImageIOTest.java: New testcases.

2004-12-26  Michael Koch  <konqueror@gmx.de>

	* choose, choose-classes: Support 'locales' package.
	* gnu/testlet/locales/LocaleTest.java: New locale testcases.

2004-12-25  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/TextAction/augmentList.java,
	gnu/testlet/javax/swing/JTextField/getActions.java,
	gnu/testlet/javax/swing/text/DefaultEditorKit/getActions.java:
	New files.

2004-12-25  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/DefaultMetalThemeTest.java,
	gnu/testlet/javax/swing/plaf/metal/MetalTheme/MetalThemeTest.java:
	New files.

2004-12-24  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/ResourceBundle/getBundle.java:
	Add low case locale test.

2004-12-22  Arnaud Vandyck  <arnaud.vandyck@ulg.ac.be>

	* gnu/testlet/javax/swing/text/StringContent/StringContentTest.java:
	New file.

2004-12-20  Robert Schuster <thebohemian@gmx.net>
